add remaining page extractor code

--- a/pdfextractor_usingOCR.ipynb
+++ b/pdfextractor_usingOCR.ipynb
@@ -29,18 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "021e75c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"결제 서류\"is existing in the PDF file.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test code\n",
     "from PyPDF2 import PdfReader\n",
@@ -73,23 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "bb3d2b3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created: C:/Users/ballj/OneDrive/바탕 화면/result\\sample_이력서.pdf\n",
-      "Keyword \"결제 서류\" found in C:/Users/ballj/OneDrive/바탕 화면/sample/sample.pdf\n",
-      "Created: C:/Users/ballj/OneDrive/바탕 화면/result\\sample_이력서.pdf\n",
-      "Keyword \"결제 서류\" found in C:/Users/ballj/OneDrive/바탕 화면/sample\\sample.pdf\n",
-      "Created: C:/Users/ballj/OneDrive/바탕 화면/result\\sample2_이력서.pdf\n",
-      "Keyword \"결제 서류\" found in C:/Users/ballj/OneDrive/바탕 화면/sample\\sample2.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import filedialog, simpledialog\n",
@@ -182,54 +161,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "73d72f48",
+   "execution_count": 1,
+   "id": "aa0d58fb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\"2023.08.14\"is in 4 page of the pdf file\n"
-     ]
-    }
-   ],
-   "source": [
-    "# test code\n",
-    "import fitz  # PyMuPDF\n",
-    "\n",
-    "def search_keyword_in_pdf(pdf_path, keyword):\n",
-    "    doc = fitz.open(pdf_path)\n",
-    "    keyword_found = False\n",
-    "\n",
-    "    for page_num, page in enumerate(doc, start=1):\n",
-    "        text = page.get_text()\n",
-    "        if keyword in text:\n",
-    "            print(f'\"{keyword}\"is in {page_num} page of the pdf file')\n",
-    "            keyword_found = True\n",
-    "            break  # break if keyword is found\n",
-    "\n",
-    "    if not keyword_found:\n",
-    "        print(f'\"{keyword}\" is not existing in the PDF file')\n",
-    "\n",
-    "# test code\n",
-    "PDF_FILE_PATH = r\"C:\\Users\\user\\Desktop\\sample\\sample.pdf\"\n",
-    "keyword = \"2023.08.14\"\n",
-    "search_keyword_in_pdf(PDF_FILE_PATH, keyword)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a93e68e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Keyword \"충원요청서\" not found in C:/Users/user/Desktop/sample\\sample.pdf\n",
-      "Keyword \"충원요청서\" not found in C:/Users/user/Desktop/sample\\sample2.pdf\n"
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_5260\\2708184998.py\", line 58, in extract_all_pdfs_in_folder\n",
+      "    process_pdf(pdf_file, output_folder, output_prefix, keyword)\n",
+      "  File \"C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_5260\\2708184998.py\", line 32, in process_pdf\n",
+      "    extract_pages(pdf_path, start_page, end_page, output_folder, output_prefix)\n",
+      "  File \"C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_5260\\2708184998.py\", line 22, in extract_pages\n",
+      "    doc.select(range(start_page - 1, end_page))  # page range\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\site-packages\\fitz\\__init__.py\", line 5418, in select\n",
+      "    retainpages(pdf, pyliste)\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\site-packages\\fitz\\__init__.py\", line 20962, in retainpages\n",
+      "    if strip_outlines( doc, outlines, pagecount, page_object_nums, names_list) == 0:\n",
+      "       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\site-packages\\fitz\\__init__.py\", line 21057, in strip_outlines\n",
+      "    nc, first, last = strip_outline(doc, first, page_count, page_object_nums, names_list)\n",
+      "                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\site-packages\\fitz\\__init__.py\", line 21027, in strip_outline\n",
+      "    elif prev.m_internal:\n",
+      "         ^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'NoneType' object has no attribute 'm_internal'\n"
      ]
     }
    ],
@@ -239,6 +202,85 @@
     "import fitz  # PyMuPDF\n",
     "import glob\n",
     "import os\n",
+    " \n",
+    "def find_keyword_start_page(pdf_path, keyword):\n",
+    "    doc = fitz.open(pdf_path)\n",
+    "    start_page = None\n",
+    "    for i, page in enumerate(doc):\n",
+    "        text = page.get_text()\n",
+    "        if keyword in text:\n",
+    "            start_page = i+1\n",
+    "            break\n",
+    "    doc.close()\n",
+    "    return start_page\n",
+    " \n",
+    "def extract_pages(pdf_path, start_page, end_page, output_folder, output_prefix):\n",
+    "    doc = fitz.open(pdf_path)\n",
+    "    fname = os.path.splitext(os.path.basename(pdf_path))[0]\n",
+    "    output_filename = os.path.join(output_folder, f'{fname}_{output_prefix}.pdf')\n",
+    "    doc.select(range(start_page - 1, end_page))  # page range\n",
+    "    doc.save(output_filename)\n",
+    "    doc.close()\n",
+    "    print(f'Created: {output_filename}')\n",
+    "    \n",
+    "def process_pdf(pdf_path, output_folder, output_prefix, keyword):\n",
+    "    start_page = find_keyword_start_page(pdf_path, keyword)\n",
+    "    if start_page:\n",
+    "        doc = fitz.open(pdf_path)\n",
+    "        end_page = len(doc)  # 문서의 총 페이지 수\n",
+    "        extract_pages(pdf_path, start_page, end_page, output_folder, output_prefix)\n",
+    "        print(f'Keyword \"{keyword}\" found in {pdf_path}')\n",
+    "        doc.close()\n",
+    "    else:\n",
+    "        print(f'Keyword \"{keyword}\" not found in {pdf_path}')\n",
+    "        \n",
+    "def extract_single_pdf():\n",
+    "    pdf_path = filedialog.askopenfilename(title=\"Select PDF file\", filetypes=[(\"PDF files\", \"*.pdf\")])\n",
+    "    if pdf_path:\n",
+    "        output_folder = filedialog.askdirectory(title=\"Folder to save\")\n",
+    "        if output_folder:\n",
+    "            output_prefix = simpledialog.askstring(\"Input\", \"suffix of output file name:\")\n",
+    "            keyword = simpledialog.askstring(\"Input\", \"Keyword :\")\n",
+    "            if output_prefix and keyword:\n",
+    "                process_pdf(pdf_path, output_folder, output_prefix, keyword)\n",
+    "\n",
+    "def extract_all_pdfs_in_folder():\n",
+    "    folder_path = filedialog.askdirectory(title=\"Select PDF file\")\n",
+    "    if folder_path:\n",
+    "        output_folder = filedialog.askdirectory(title=\"Folder to save\")\n",
+    "        if output_folder:\n",
+    "            output_prefix = simpledialog.askstring(\"Input\", \"suffix of output file name:\")\n",
+    "            keyword = simpledialog.askstring(\"Input\", \"Keyword to find:\")\n",
+    "            if output_prefix and keyword:\n",
+    "                pdf_files = glob.glob(os.path.join(folder_path, '*.pdf'))\n",
+    "                for pdf_file in pdf_files:\n",
+    "                    process_pdf(pdf_file, output_folder, output_prefix, keyword)\n",
+    "\n",
+    "def main():\n",
+    "    root = tk.Tk()\n",
+    "    root.title(\"PDF Keyword Page Extractor with PyMuPDF\")\n",
+    " \n",
+    "    extract_single_btn = tk.Button(root, text=\"Extract Pages from Single PDF by Keyword\", command=extract_single_pdf)\n",
+    "    extract_single_btn.pack(pady=10)\n",
+    " \n",
+    "    extract_all_btn = tk.Button(root, text=\"Extract Pages from All PDFs in Folder by Keyword\", command=extract_all_pdfs_in_folder)\n",
+    "    extract_all_btn.pack(pady=10)\n",
+    " \n",
+    "    root.mainloop()\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "73d72f48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test code\n",
+    "import fitz  # PyMuPDF\n",
     "\n",
     "def find_keyword_end_page(pdf_path, keyword):\n",
     "    doc = fitz.open(pdf_path)\n",
@@ -251,6 +293,76 @@
     "    doc.close()\n",
     "    return end_page\n",
     "\n",
+    "# test code\n",
+    "PDF_FILE_PATH = r\"C:\\Users\\user\\Desktop\\sample\\자격증_결제서류_연수일지.pdf\"\n",
+    "keyword = \"충원요청서\"\n",
+    "find_keyword_end_page(PDF_FILE_PATH, keyword)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9a93e68e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10420\\3159671854.py\", line 67, in extract_all_pdfs_in_folder\n",
+      "    process_pdf(pdf_file, output_folder, output_prefix, keyword, not_found_folder)\n",
+      "  File \"C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10420\\3159671854.py\", line 43, in process_pdf\n",
+      "    extract_pages(pdf_path, 1, end_page, output_folder, output_prefix)\n",
+      "  File \"C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10420\\3159671854.py\", line 30, in extract_pages\n",
+      "    doc.select(range(start_page - 1, end_page))  # page range\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\site-packages\\fitz\\__init__.py\", line 5418, in select\n",
+      "    retainpages(pdf, pyliste)\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\site-packages\\fitz\\__init__.py\", line 20962, in retainpages\n",
+      "    if strip_outlines( doc, outlines, pagecount, page_object_nums, names_list) == 0:\n",
+      "       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\site-packages\\fitz\\__init__.py\", line 21057, in strip_outlines\n",
+      "    nc, first, last = strip_outline(doc, first, page_count, page_object_nums, names_list)\n",
+      "                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\user\\anaconda3\\Lib\\site-packages\\fitz\\__init__.py\", line 21027, in strip_outline\n",
+      "    elif prev.m_internal:\n",
+      "         ^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'NoneType' object has no attribute 'm_internal'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, simpledialog\n",
+    "import fitz  # PyMuPDF\n",
+    "import glob\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "def find_keyword_end_page(pdf_path, keyword):\n",
+    "    try:\n",
+    "        doc = fitz.open(pdf_path)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error opening PDF file: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "    end_page = None\n",
+    "    for i, page in enumerate(doc):\n",
+    "        text = page.get_text()\n",
+    "        if keyword in text:\n",
+    "            end_page = i\n",
+    "            break\n",
+    "            \n",
+    "    if end_page is None:  # 키워드가 발견되지 않은 경우\n",
+    "        end_page = len(doc)  # 문서의 전체 페이지 수를 반환\n",
+    "    doc.close()\n",
+    "    return end_page\n",
+    "\n",
     "def extract_pages(pdf_path, start_page, end_page, output_folder, output_prefix):\n",
     "    doc = fitz.open(pdf_path)\n",
     "    fname = os.path.splitext(os.path.basename(pdf_path))[0]\n",
@@ -260,11 +372,105 @@
     "    doc.close()\n",
     "    print(f'Created: {output_filename}')\n",
     "\n",
-    "def process_pdf(pdf_path, output_folder, output_prefix, keyword):\n",
+    "def process_pdf(pdf_path, output_folder, output_prefix, keyword, not_found_folder):\n",
     "    end_page = find_keyword_end_page(pdf_path, keyword)\n",
-    "    if end_page:\n",
+    "    if end_page == len(fitz.open(pdf_path)):  # 키워드가 발견되지 않았을 경우\n",
+    "        # 파일을 not_found_folder로 이동\n",
+    "        dest_path = os.path.join(not_found_folder, os.path.basename(pdf_path))\n",
+    "        shutil.move(pdf_path, dest_path)  # 파일 이동\n",
+    "        print(f'Keyword \"{keyword}\" not found in {pdf_path}, moved to {dest_path}')\n",
+    "    else:\n",
     "        extract_pages(pdf_path, 1, end_page, output_folder, output_prefix)\n",
+    "        print(f'Keyword \"{keyword}\" found in {pdf_path}, extracted up to page {end_page}')\n",
+    "        \n",
+    "def extract_single_pdf():\n",
+    "    pdf_path = filedialog.askopenfilename(title=\"Select PDF file\", filetypes=[(\"PDF files\", \"*.pdf\")])\n",
+    "    if pdf_path:\n",
+    "        output_folder = filedialog.askdirectory(title=\"Folder to save\")\n",
+    "        if output_folder:\n",
+    "            output_prefix = simpledialog.askstring(\"Input\", \"suffix of output file name:\")\n",
+    "            keyword = simpledialog.askstring(\"Input\", \"Keyword :\")\n",
+    "            if output_prefix and keyword:\n",
+    "                process_pdf(pdf_path, output_folder, output_prefix, keyword)\n",
+    "\n",
+    "def extract_all_pdfs_in_folder():\n",
+    "    folder_path = filedialog.askdirectory(title=\"Select PDF file\")\n",
+    "    if folder_path:\n",
+    "        output_folder = filedialog.askdirectory(title=\"Folder to save\")\n",
+    "        not_found_folder = filedialog.askdirectory(title=\"Select folder to save PDFs where keyword is not found\")\n",
+    "        if output_folder and not_found_folder:\n",
+    "            output_prefix = simpledialog.askstring(\"Input\", \"suffix of output file name:\")\n",
+    "            keyword = simpledialog.askstring(\"Input\", \"Keyword to find:\")\n",
+    "            if output_prefix and keyword:\n",
+    "                pdf_files = glob.glob(os.path.join(folder_path, '*.pdf'))\n",
+    "                for pdf_file in pdf_files:\n",
+    "                    process_pdf(pdf_file, output_folder, output_prefix, keyword, not_found_folder)\n",
+    "\n",
+    "def main():\n",
+    "    root = tk.Tk()\n",
+    "    root.title(\"PDF Keyword Page Extractor with PyMuPDF\")\n",
+    "\n",
+    "    extract_single_btn = tk.Button(root, text=\"Extract Pages from Single PDF by Keyword\", command=extract_single_pdf)\n",
+    "    extract_single_btn.pack(pady=10)\n",
+    "\n",
+    "    extract_all_btn = tk.Button(root, text=\"Extract Pages from All PDFs in Folder by Keyword\", command=extract_all_pdfs_in_folder)\n",
+    "    extract_all_btn.pack(pady=10)\n",
+    "\n",
+    "    root.mainloop()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7ff0a21",
+   "metadata": {},
+   "source": [
+    "#### 키워드포함 페이지 ~ 끝"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e798d10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, simpledialog\n",
+    "import fitz  # PyMuPDF\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "def find_keyword_start_page(pdf_path, keyword):\n",
+    "    doc = fitz.open(pdf_path)\n",
+    "    start_page = None\n",
+    "    for i, page in enumerate(doc):\n",
+    "        text = page.get_text()\n",
+    "        if keyword in text:\n",
+    "            start_page = i+1\n",
+    "            break\n",
+    "    doc.close()\n",
+    "    return start_page\n",
+    "\n",
+    "def extract_pages(pdf_path, start_page, end_page, output_folder, output_prefix):\n",
+    "    doc = fitz.open(pdf_path)\n",
+    "    fname = os.path.splitext(os.path.basename(pdf_path))[0]\n",
+    "    output_filename = os.path.join(output_folder, f'{fname}_{output_prefix}.pdf')\n",
+    "    doc.select(range(start_page - 1, end_page))  # page range\n",
+    "    doc.save(output_filename)\n",
+    "    doc.close()\n",
+    "    print(f'Created: {output_filename}')\n",
+    "    \n",
+    "def process_pdf(pdf_path, output_folder, output_prefix, keyword):\n",
+    "    start_page = find_keyword_start_page(pdf_path, keyword)\n",
+    "    if start_page:\n",
+    "        doc = fitz.open(pdf_path)\n",
+    "        end_page = len(doc)  # 문서의 총 페이지 수\n",
+    "        extract_pages(pdf_path, start_page, end_page, output_folder, output_prefix)\n",
     "        print(f'Keyword \"{keyword}\" found in {pdf_path}')\n",
+    "        doc.close()\n",
     "    else:\n",
     "        print(f'Keyword \"{keyword}\" not found in {pdf_path}')\n",
     "\n",
@@ -289,7 +495,6 @@
     "                pdf_files = glob.glob(os.path.join(folder_path, '*.pdf'))\n",
     "                for pdf_file in pdf_files:\n",
     "                    process_pdf(pdf_file, output_folder, output_prefix, keyword)\n",
-    "\n",
     "\n",
     "def main():\n",
     "    root = tk.Tk()\n",
@@ -341,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "88229089",
    "metadata": {},
    "outputs": [],
